src/test/ui/inference/need_type_info/type-alias.stderr
error[E0282]: type annotations needed
  --> $DIR/type-alias.rs:12:5
   |
LL |     DirectAlias::new()
   |     ^^^^^^^^^^^^^^^^ cannot infer type for type parameter `T`

error[E0282]: type annotations needed
  --> $DIR/type-alias.rs:32:5
   |
LL |     DirectButWithDefaultAlias::new();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for type parameter `T`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
